fix errors on mobile version

--- a/style.css
+++ b/style.css
@@ -22,11 +22,15 @@
   
   /* Ссылки меню навигации */
   .sidenav a {
-    padding: 8px 8px 8px 32px;
+    font-family: Noto Sans SC;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 71px;
+    color: #404040;
     text-decoration: none;
-    font-size: 25px;
-    color: #818181;
     display: block;
+    margin-left: 26px;
     transition: 0.3s;
   }
   
@@ -78,6 +82,7 @@ body{
 }
 #nav h5{
     margin:0;
+    font-size: 18px;
 }
 #toggle{
     justify-self: flex-end;
@@ -125,7 +130,7 @@ body{
     font-family: Noto Sans SC;
     font-style: normal;
     font-weight: 900;
-    font-size: 10vh;
+    font-size: 96px;
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 6px 0px 0px rgba(255, 33, 33, 0.25), -8px 0px 0px rgba(27, 100, 209, 0.26);
     color: #FFFFFF;
@@ -138,7 +143,6 @@ body{
     font-size: 36px;
     text-align: center;
     color: #F0EFEF;
-    margin: 0;
 }
 #header #subtitle{
     display: flex;
@@ -626,6 +630,9 @@ footer #qr-code{
     justify-items: center;
     align-items: center;
 }
+footer #qr-code div{
+    margin-bottom: 26px;
+}
 footer #qr-code div p{
     font-family: Noto Sans SC;
     font-style: normal;
@@ -703,10 +710,10 @@ h2{
 }
 @media (min-width: 768px) and (max-width: 999px){
     #header #title h1 {
-        font-size: 10vw;
+        font-size: 96px;
     }
     #header #title h2 {
-        font-size: 4.5vw;
+        font-size: 36px;
     }
     #what-we-offer .card{
         margin: 10px 0px 10px 5px;
@@ -719,7 +726,6 @@ h2{
         font-size: 12px;
     }
     #about-us #text{
-        font-size: 13px!important;
         bottom: 39%;
     }
     #about-us #head-span{
@@ -776,8 +782,8 @@ h2{
     #about-us #text{
         margin: 87px 0px 20px 0px;
     }
-    #about-us h6 {
-        margin: 0% 0% 13% 0% !important;
+    footer{
+        padding: 2% 5%;
     }
     footer #info {
         font-size: 11px;
@@ -899,7 +905,8 @@ h2{
         grid-row: 8;
     }
     #about-us #text{
-        font-size: 10.5px;
+        font-size: 16px;
+        height: auto;
         bottom: 30%;
         width: 90%;
     }
@@ -910,10 +917,14 @@ h2{
         left: 0px;
     }
     #header #title h1 {
-        font-size: 10vw;
+        font-size: 56px;
     }
     #header #title h2 {
-        font-size: 4.5vw;
+        font-size: 20px;
+        margin: 39px 0px 0px 0px;
+    }
+    #header #subtitle{
+        margin: 44px 0px;
     }
     #header #logos  .logo img{
         width: 100px;
@@ -922,7 +933,6 @@ h2{
         margin: 0px 13px 10px 13px;
     }
     #benefits-to-you #text{
-        font-size: 17px;
         width: 90%;
     }
     #benefits-to-you #image{
@@ -963,6 +973,12 @@ h2{
         grid-column: 1;
         grid-row: 1;
     }
+    #about-us h6 {
+        margin: 0vh 0vh 0vh 0vh;
+    }
+    h2:not(#special-h2){
+        font-size: 36px!important;
+    }
 }
 @media (min-width:769px) and (max-width: 1025px){
     #our-projects #text{
@@ -992,11 +1008,11 @@ h2{
         grid-column: 3;
     }
     #about-us #text{
-        font-size: 14.5px;
-        bottom: 48%
+        font-size: 18px;
+        bottom: 61%
     }
     #about-us #head-span{
-        margin:0px 64px;
+        margin:0px 0px;
     }
     #what-we-offer #cards-1{
         grid-column: 1;
@@ -1015,10 +1031,13 @@ h2{
         grid-row: 1;
     }
     #header #title h1 {
-        font-size: 8vw;
+        font-size: 96px;
     }
     #header #title h2 {
-        font-size: 3.5vw;
+        font-size: 36px;
+    }
+    #about-us h6 {
+        margin: 0px 0px 100px 0px;
     }
     #about-us #people img{
         max-width: 799px!important;
@@ -1060,9 +1079,6 @@ h2{
     #about-us #text{
         margin: 87px 0px 20px 0px;
     }
-    #about-us h6 {
-        margin: 0vh 0vh 6.5vh 0vh;
-    }
     #header{
         height: auto !important;
     }
@@ -1070,7 +1086,7 @@ h2{
         margin-bottom: 8%;
     }
     #header{
-        background-position-x: 25%;
+        background-position-x: 28%;
     }
     #header #title{
         padding-top: 30%;
